# My_TemplateCode

./: .gitignore  CMakeLists.txt  main.cpp
doc/: cmake.md
include/: base.h  hello.h
resource/icon/: windres.rc
src/: base.cpp  hello.cpp  main.cpp
